--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# IDEs
+.idea/
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -136,5 +139,3 @@ dmypy.json
 
 # Cython debug symbols
 cython_debug/
-
-.idea/
